Changed some infos

--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/bootswatch.css" rel="stylesheet">
-    
+
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-36991809-1']);
@@ -67,7 +67,7 @@
   <div class="row">
     <div class="span6">
       <h1>the editor</h1>
-      <p class="lead">This is a search site for <a href="http://vim-scripts.org">http://www.vim.org</a>.</p>
+      <p class="lead">This is a search site for <a href="http://www.vim.org">http://www.vim.org</a>.</p>
     </div>
     <div class="span6">
       <div class="bsa well">
@@ -133,7 +133,7 @@
           Made by <a target="_blank" href="<%= @about_me %>">zhangjingqiang</a>. 
           Contact him <a href="mailto:<%= @email %>"><%= @email %></a>.<br/>
           Based on <a target="_blank" href="http://bootswatch.com">Bootwatch</a>. 
-          Hosted on <a target="_blank" href="http://vim.heroku.com">Heroku</a>.
+          Hosted on <a target="_blank" href="http://vim.herokuapp.com">Heroku</a>.
           Powered by <a target="_blank" href="http://www.sinatrarb.com">Sinatra</a>.
         </div>
       </footer>
