Changed tweet lang from ja to en

--- a/views/index.erb
+++ b/views/index.erb
@@ -106,7 +106,7 @@
         <p><a href="<%= @google + @scripts[:site_href][i] %>"><%= @scripts[:site_text][i] %></a></p>
         <p><%= @scripts[:description][i] %></p>
         <div style="text-align:right;">
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="<%= @google + @scripts[:site_href][i] %>" data-lang="ja">Tweet</a>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="<%= @google + @scripts[:site_href][i] %>" data-lang="en">Tweet</a>
         </div>
       </div>
     </div>
