--- a/views/index.erb
+++ b/views/index.erb
@@ -140,7 +140,7 @@
           Made by <a target="_blank" href="<%= @about_me %>">zhangjingqiang</a>
           Contact him <a href="mailto:<%= @email %>"><%= @email %></a><br/>
           Based on <a target="_blank" href="http://bootswatch.com">Bootwatch</a>
-          Hosted on <a target="_blank" href="http://vim.herokuapp.com">Heroku</a>
+          Hosted on <a target="_blank" href="http://www.heroku.com">Heroku</a>
           Powered by <a target="_blank" href="http://www.sinatrarb.com">Sinatra</a>
         </div>
       </footer>
