--- a/views/index.erb
+++ b/views/index.erb
@@ -62,7 +62,7 @@
   <div class="row">
     <div class="span6">
       <h1>the editor</h1>
-      <p class="lead">This is a search site for <a href="http://www.vim.org">http://www.vim.org</a>.</p>
+      <p class="lead">Programmer's Editor</p>
     </div>
     <div class="span6">
       <div class="bsa well">
